# docling-ibm-models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml  run_tf.py
.github/: PULL_REQUEST_TEMPLATE.md  mergify.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: cd.yml  checks.yml  ci.yml
demo/: demo_code_formula_predictor.py  demo_document_figure_classifier_predictor.py  demo_layout_predictor.py
devtools/: check_code.sh
docling_ibm_models/code_formula_model/: code_formula_predictor.py
docling_ibm_models/code_formula_model/models/: sam.py  sam_opt.py  sam_opt_image_processor.py  vary_opt.py  vary_opt_image_processor.py
docling_ibm_models/code_formula_model/utils/: constants.py  conversations.py
docling_ibm_models/document_figure_classifier_model/: document_figure_classifier_predictor.py
docling_ibm_models/layoutmodel/: layout_predictor.py  layout_predictor_jit.py  layout_predictor_st.py
docling_ibm_models/reading_order/: ReadingOrder.py  reading_order_rb.py
docling_ibm_models/tableformer/: common.py  otsl.py  test_dataset_cache.py  test_prepare_image.py
docling_ibm_models/tableformer/data_management/: data_transformer.py  functional.py  matching_post_processor.py  tf_cell_matcher.py  tf_dataset.py  tf_predictor.py  transforms.py
docling_ibm_models/tableformer/models/common/: base_model.py
docling_ibm_models/tableformer/models/table04_rs/: bbox_decoder_rs.py  encoder04_rs.py  tablemodel04_rs.py  transformer_rs.py
docling_ibm_models/tableformer/utils/: app_profiler.py  mem_monitor.py  torch_utils.py  variance.py
tests/: test_code_formula_predictor.py  test_common.py  test_document_figure_classifier.py  test_layout_predictor.py  test_layout_predictor_jit.py  test_reading_order.py  test_tf_predictor.py
tests/test_data/code_formula/gt/: code.txt  formula.txt
tests/test_data/model_artifacts/: put_model_check_here.txt
tests/test_data/samples/: ADS.2007.page_123.png_iocr.parse_format.json  PHM.2013.page_30.png_iocr.parse_format.json  empty_iocr.png.json
